--- a/src/main/resources/view/partials/_formEditPaper.fxml
+++ b/src/main/resources/view/partials/_formEditPaper.fxml
@@ -6,7 +6,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<TabPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="">
+<TabPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:id="viewRoot" fx:controller="department.ui.controller.edit.EditPaperController">
    <tabs>
       <Tab text="Редагування роботи">
          <content>
@@ -58,7 +58,7 @@
                   <Label text="Виконавець" />
                   <ComboBox fx:id="executorBox" editable="true" maxWidth="1.7976931348623157E308" />
                   <Label text="Керівник" />
-                  <ComboBox fx:id="chiefBox" editable="true" layoutX="35.0" layoutY="185.0" maxWidth="1.7976931348623157E308" />
+                  <ComboBox fx:id="supervisorBox" editable="true" layoutX="35.0" layoutY="185.0" maxWidth="1.7976931348623157E308" />
                   <FlowPane prefHeight="86.0" prefWidth="389.0" />
                   <HBox alignment="CENTER">
                      <children>
@@ -68,7 +68,7 @@
                         <Insets bottom="30.0" top="30.0" />
                      </VBox.margin>
                   </HBox>
-                  <Label fx:id="editStatus" text="some error here">
+                  <Label fx:id="errorLabel" text="some error here">
                      <font>
                         <Font size="14.0" />
                      </font>
