--- a/src/main/resources/view/partials/_formEditPostgraduate.fxml
+++ b/src/main/resources/view/partials/_formEditPostgraduate.fxml
@@ -6,7 +6,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.control.*?>
 
-<AnchorPane prefHeight="453.0" fx:id="viewRoot" prefWidth="491.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="department.ui.controller.edit.EditPostgraduateController">
+<AnchorPane fx:id="viewRoot" prefHeight="453.0" prefWidth="491.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="department.ui.controller.edit.EditPostgraduateController">
    <children>
       <TabPane layoutX="-1.0">
          <tabs>
@@ -157,7 +157,16 @@
             </Tab>
             <Tab text="Список робіт">
               <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                         <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+                             <children>
+                                 <ListView fx:id="paperListView" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="465.0" prefWidth="513.0" />
+                                 <Pagination fx:id="paginationPaper" maxPageIndicatorCount="5" maxWidth="1.7976931348623157E308" pageCount="1" prefHeight="30.0" />
+                             </children>
+                         </VBox>
+                     </children>
+                  </AnchorPane>
               </content>
             </Tab>
          </tabs>
