--- a/src/main/resources/view/partials/_formEditTopic.fxml
+++ b/src/main/resources/view/partials/_formEditTopic.fxml
@@ -94,9 +94,22 @@
          </content>
       </Tab>
       <Tab text="Перелік наукових праць">
-        <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-        </content>
+         <content>
+            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+               <children>
+                  <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
+                        AnchorPane.topAnchor="0.0" xmlns="http://javafx.com/javafx/8"
+                        xmlns:fx="http://javafx.com/fxml/1">
+                     <children>
+                        <ListView fx:id="paperListView" maxHeight="1.7976931348623157E308"
+                                  maxWidth="1.7976931348623157E308"/>
+                        <Pagination fx:id="paginationPaper" maxPageIndicatorCount="5" maxWidth="1.7976931348623157E308"
+                                    pageCount="1" prefHeight="30.0"/>
+                     </children>
+                  </VBox>
+               </children>
+            </AnchorPane>
+         </content>
       </Tab>
    </tabs>
 </TabPane>
