Modified views. Fixed columns width

--- a/src/main/resources/view/partials/_formCreatePostgraduate.fxml
+++ b/src/main/resources/view/partials/_formCreatePostgraduate.fxml
@@ -6,7 +6,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.control.*?>
 
-<AnchorPane minWidth="400.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:id="viewRoot" fx:controller="department.ui.controller.create.CreatePostgraduateController">
+<AnchorPane fx:id="viewRoot" minWidth="400.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="department.ui.controller.create.CreatePostgraduateController">
    <children>
           <VBox alignment="CENTER_LEFT" layoutY="50.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
               <children>
@@ -136,7 +136,7 @@
                   <Insets bottom="30.0" top="30.0" />
                </VBox.margin>
             </HBox>
-            <Label layoutX="35.0" layoutY="322.0" text="Error">
+            <Label layoutX="35.0" layoutY="322.0">
                <padding>
                   <Insets top="3.0" />
                </padding>
