--- a/src/main/resources/view/partials/_formCreateTeacher.fxml
+++ b/src/main/resources/view/partials/_formCreateTeacher.fxml
@@ -6,8 +6,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.control.*?>
 
-
-<AnchorPane prefHeight="451.0" prefWidth="297.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:id="viewRoot" fx:controller="department.ui.controller.create.CreateTeacherController">
+<AnchorPane fx:id="viewRoot" prefHeight="451.0" prefWidth="297.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="department.ui.controller.create.CreateTeacherController">
    <children>
           <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
               <children>
@@ -121,7 +120,7 @@
                   <Insets bottom="10.0" top="30.0" />
                </VBox.margin>
             </HBox>
-            <Label fx:id="statusCreate" text="Error" />
+            <Label fx:id="statusCreate" />
               </children>
          <padding>
             <Insets left="25.0" right="25.0" />
