--- a/src/main/resources/view/partials/_formCreateMaster.fxml
+++ b/src/main/resources/view/partials/_formCreateMaster.fxml
@@ -6,7 +6,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.control.*?>
 
-<AnchorPane minWidth="400.0" fx:id="viewRoot" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="department.ui.controller.create.CreateMasterController">
+<AnchorPane fx:id="viewRoot" minWidth="400.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="department.ui.controller.create.CreateMasterController">
    <children>
           <VBox layoutY="6.0" maxWidth="1.7976931348623157E308" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
               <children>
@@ -108,7 +108,7 @@
                   <Insets bottom="30.0" top="30.0" />
                </VBox.margin>
             </HBox>
-            <Label fx:id="statusCreate" text="Error" />
+            <Label fx:id="statusCreate" />
               </children>
          <padding>
             <Insets left="25.0" right="25.0" />
