--- a/src/main/resources/view/partials/_formCreatePaper.fxml
+++ b/src/main/resources/view/partials/_formCreatePaper.fxml
@@ -6,7 +6,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/8" fx:id="viewRoot" xmlns:fx="http://javafx.com/fxml/1" fx:controller="department.ui.controller.create.CreatePaperController">
+<AnchorPane fx:id="viewRoot" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="department.ui.controller.create.CreatePaperController">
    <children>
       <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -67,7 +67,7 @@
                   <Insets bottom="30.0" top="30.0" />
                </VBox.margin>
             </HBox>
-            <Label fx:id="statusCreate" text="error" />
+            <Label fx:id="statusCreate" />
          </children>
          <padding>
             <Insets left="25.0" right="25.0" />
