--- a/src/main/resources/view/partials/_formCreateTopic.fxml
+++ b/src/main/resources/view/partials/_formCreateTopic.fxml
@@ -19,8 +19,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:id="viewRoot" fx:controller="department.ui.controller.create.CreateTopicController">
+<AnchorPane fx:id="viewRoot" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="department.ui.controller.create.CreateTopicController">
    <children>
       <VBox maxWidth="1.7976931348623157E308" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
          <children>
@@ -83,7 +82,7 @@
                   <Insets bottom="30.0" top="30.0" />
                </VBox.margin>
             </HBox>
-            <Label text="Error" />
+            <Label />
          </children>
          <padding>
             <Insets left="25.0" right="25.0" />
